<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ScaleConfig" Id="{f8d7725f-94f5-0e4f-2972-4354391a06b6}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '0'} 
TYPE ST_ScaleConfig :
STRUCT
	fInputMin 	: LREAL := 0;
	fInputMax 	: LREAL := 100;
	fOutputMin 	: LREAL := 0;
	fOutputMax 	: LREAL := 65535;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>